# nbp_gold

./: CMakeLists.txt
.github/workflows/: qodana_code_quality.yml
src/: gold_quote.c  gold_quote.h  http_client.c  http_client.h  http_server.c  http_server.h  json_utils.c  json_utils.h  main.c
